--- a/react-nest-learn/frontends/main-app/package.json
+++ b/react-nest-learn/frontends/main-app/package.json
@@ -19,15 +19,21 @@
   "prettier": "@npm-questionpro/wick-ui-prettier-config",
   "dependencies": {
     "@npm-questionpro/wick-ui-lib": "^1.5.2",
+    "@tanstack/react-query": "^5.87.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@npm-questionpro/wick-ui-prettier-config": "^1.0.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
