--- a/react-nest-learn/.gitignore
+++ b/react-nest-learn/.gitignore
@@ -1,4 +1,36 @@
-dist/
-**/dist/
-**/node_modules/
+# Node modules
 node_modules/
+
+# Build output
+dist/
+build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE-specific files
+.vscode/
+.idea/
+
+# Temporary files
+tmp/
+*.tmp
+
+# Test coverage reports
+coverage/
+
+# Misc
+.DS_Store
+Thumbs.db
+react-nest-learn/backends/backend-main/dist/app.module.js
