--- a/react-nest-learn/backends/backend-main/package.json
+++ b/react-nest-learn/backends/backend-main/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@npm-questionpro/eslint-config-backend": "^1.0.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "config": "^4.1.1",
